--- a/styles/architect.css
+++ b/styles/architect.css
@@ -46,7 +46,7 @@ nav li a{
 
 }
 
-.banner-description{
+.text-light-gray{
     font-size: 16px;
     font-weight:700px ;
     color: brown;
@@ -90,4 +90,32 @@ main{
 
 .of{
     color: brown;
+}
+.section-title{
+    font-size: 45px;
+    font font-weight: 700px;
+}
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid orangered;
+    text-align: center;
+    padding: 30px;
+}
+.facts-card-container{
+    display: flex;
+    justify-content:space-around ;
+    text-align: center;
+
+}
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: black;
+    margin-top: 10px;
+    margin-bottom: 15px;
+
+}
+.facts-card-container .card-title{
+    font-weight: 600px;
+    font-size: 20px;
+    margin-top: 5px;
 }
